// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render Divider using height 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    height="100px"
    style={
      [
        {
          "display": "flex",
          "height": 100,
        },
      ]
    }
  >
    <View
      borderLeftColor="surface.border.gray.muted"
      borderPosition="borderLeft"
      data-blade-component="divider"
      dividerStyle="solid"
      height="100%"
      isDividerHorizontal={false}
      style={
        [
          {
            "borderLeftColor": "hsla(206, 10%, 29%, 0.12)",
            "borderLeftStyle": "solid",
            "height": "100%",
          },
          {
            "alignSelf": "stretch",
            "borderLeftStyle": "solid",
            "borderLeftWidth": 1,
            "borderWidth": 0,
            "height": "100%",
          },
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;

exports[`<Divider /> should render Divider within flex container 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      borderBottomColor="surface.border.gray.muted"
      borderPosition="borderBottom"
      data-blade-component="divider"
      dividerStyle="solid"
      isDividerHorizontal={true}
      style={
        [
          {
            "borderBottomColor": "hsla(206, 10%, 29%, 0.12)",
            "borderBottomStyle": "solid",
          },
          {
            "borderBottomStyle": "solid",
            "borderBottomWidth": 1,
            "borderWidth": 0,
            "flexGrow": 1,
          },
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;
